force-app/main/default/objects/Document_Details__c/Document_Details__c.object-meta.xml
<CustomObject>
    <label>Document Details</label>
    <nameField>
        <displayFormat>Doc-{00000000}</displayFormat>
        <label>Document Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>