force-app/main/default/objects/Document_Details__c/fields/RW_Applicant_Details__c.field-meta.xml
<CustomField>
    <fullName>RW_Applicant_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Details</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>Document Details</relationshipLabel>
    <relationshipName>Document_Details</relationshipName>
    <type>Lookup</type>
</CustomField>