force-app/main/default/objects/Document_Details__c/fields/RW_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>RW_Document_Type__c</fullName>
    <label>Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>