force-app/main/default/objects/Document_Details__c/fields/RW_Loan_Name__c.field-meta.xml
<CustomField>
    <fullName>RW_Loan_Name__c</fullName>
    <label>Loan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>